Cloudinary uploads functional, added Cloudinary gem, CarrierWave & Figaro. Working on user controllers & views.

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,11 @@
     </head>
     <body>
         <div class="card">
-            <img src=""
+            <img src="https://drive.google.com/open?id=1q6KddWuOgFAffDGkHHCRoKznW7zI3t3Q" id="img-preview" />
+            <label class="file-upload-container" for="file-upload">
+                <input id="file-upload" type="file" style="display:none;">
+                Select an Image
+            </label>
         </div>
     </body>
 </html>
